Fix text alignment.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -67,7 +67,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  text-align: center;
   color: white;
   padding: 15px;
   margin-top: 15px;
@@ -114,7 +113,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  text-align: center;
   color: white;
   padding: 15px;
   margin-top: 15px;
